--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ body {
 .category-card:hover { transform: translateY(-8px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
 .category-card-img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: 1; transition: transform 0.5s ease; filter: brightness(70%); }
 .category-card:hover .category-card-img { transform: scale(1.05); filter: brightness(90%); }
-.category-card-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to top, rgba(226, 222, 222, 0.8) 0%, rgba(218, 205, 205, 0) 10%); z-index: 2; }
+.category-card-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 2; }
 .category-card-content { position: relative; z-index: 3; padding: 1.5rem; color: #ffffff; height: 100%; display: flex; flex-direction: column; justify-content: flex-end; text-align: left; }
 .category-card-title-large { font-family: inherit; font-size: 1.3rem; /* Título más pequeño */ font-weight: 700; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); }
 
@@ -223,5 +223,6 @@ body {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
 }
+
 
 
